k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gocart-svc
  namespace: gocart
spec:
  selector:
    app: gocart
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
